# cmatrix

./: CMakeLists.txt  LICENSE  README.md
include/: cmatrix.h  dense.h  sparse.h
src/: add.c  cmatrix.c  dense.c  main.c  sparse.c
test/: CMakeLists.txt
test/dense_mread/: CMakeLists.txt  README.md  mread_input_0.txt  mread_input_1.txt  mread_input_2.txt  test_mread.c
test/mread/: test_mread.c
test/sparse_mread/: CMakeLists.txt  README.md  mread_input_0.txt  mread_input_1.txt  mread_input_2.txt  test_mread.c
